--- a/BlazorAI.Shared/BlazorAI.Shared.csproj
+++ b/BlazorAI.Shared/BlazorAI.Shared.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="GeneticSharp" Version="2.6.0" />
+    <PackageReference Include="GeneticSharp" Version="3.1.2" />
     <PackageReference Include="morelinq" Version="3.3.2" />
   </ItemGroup>
 
