--- a/BlazorAI/BlazorAI.Client.csproj
+++ b/BlazorAI/BlazorAI.Client.csproj
@@ -1,18 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <RunAOTCompilation>True</RunAOTCompilation>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <RunAOTCompilation>True</RunAOTCompilation>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise" Version="0.9.1.2" />
-    <PackageReference Include="Blazorise.Charts" Version="0.9.1.2" />
-    <PackageReference Include="Blazorise.Icons.Material" Version="0.9.1.2" />
-    <PackageReference Include="Blazorise.Material" Version="0.9.1.2" />
-    <PackageReference Include="Blazorise.Snackbar" Version="0.9.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.0-rc.1.20451.17" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.0-rc.1.20451.17" PrivateAssets="all" />
-    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="Blazorise" Version="1.1.3.1" />
+    <PackageReference Include="Blazorise.Charts" Version="1.1.3.1" />
+    <PackageReference Include="Blazorise.Icons.Material" Version="1.1.3.1" />
+    <PackageReference Include="Blazorise.Material" Version="1.1.3.1" />
+    <PackageReference Include="Blazorise.Snackbar" Version="1.1.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
